<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2011 Felix Bechstein
	-->
	<!--
		This file is part of WifiBarcode. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<resources>
	<string name="license_">License:</string>
	<string name="license">GPLv3 - see http://www.gnu.org/licenses/gpl-3.0.txt</string>
	<string name="author_">Author:</string>
	<string name="website_">Website:</string>
	<string name="source_">Sourcescode:</string>
	<string name="ssid">SSID</string>
	<string name="password">Password</string>
	<string name="networktype">Network Type</string>
	<string name="generate">Generate Barcode</string>
	<string name="wifi_config">WiFi Settings</string>
	<string name="error_need_root">Need root, to fetch WiFi password!</string>
	<string name="error_read_file">Error reading WiFi config!</string>
	<string name="error_read_barcode">Error reading Barcode!</string>
	<string name="error_get_barcode">Error getting Barcode!\nCheck your network connection.</string>
	<string name="custom">Custom</string>
	<string name="scan">Scan</string>
	<string name="add">Add Network</string>
	<string name="wifi_added">WiFi added</string>
	<string name="wifi_failed">Unable to add WiFi!</string>
	<string name="click_to_enlarge">Click to enlarge</string>
	<string name="install_barcode_scanner_">Install Barcode Scanner</string>
	<string name="install_barcode_scanner_hint">You need to install <b>Barcode Scanner</b>.</string>
	<string name="install">Install</string>
	<string name="about_">About WiFiBarcode</string>
	<string-array name="networktypes_">
		<item>Open</item>
		<item>WEP</item>
		<item>WPA/WPA2</item>
	</string-array>
	<string name="changelog_" translatable="false">Changelog</string>
</resources>
