<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2011 Felix Bechstein
	-->
	<!--
		This file is part of WifiBarcode. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/item_generate" android:title="@string/generate"
		android:icon="@android:drawable/ic_menu_share" android:showAsAction="always|withText" />
	<item android:id="@+id/item_scan" android:title="@string/scan"
		android:icon="@android:drawable/ic_menu_camera" android:showAsAction="always|withText" />
	<item android:id="@+id/item_wifi_config" android:title="@string/wifi_config"
		android:icon="@android:drawable/ic_menu_preferences"
		android:showAsAction="never" />
	<item android:id="@+id/item_about" android:title="@string/about_"
		android:icon="@android:drawable/ic_menu_info_details"
		android:showAsAction="never" />
</menu>
